k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
